Fix wrapping delle linee durante l'animazione

--- a/_sass/minima/components/accordion.scss
+++ b/_sass/minima/components/accordion.scss
@@ -48,7 +48,7 @@
 
     .ac-panel {
         overflow: hidden;
-        padding: 0 0 0 16px;
+        padding: 0 0 16px 16px;
 
         :last-child {
             margin-bottom: 0;
